--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@
 NODE_ENV = 'development'
 VITE_APP_TITLE = 'project'
 VITE_APP_BASE_API = '/api'
-VITE_SERVER = 'http://xxx.com'
+VITE_SERVE = 'http://sph-api.atguigu.cn'
