--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NODE_ENV = 'production'
 VITE_APP_TITLE = 'project'
-VITE_APP_BASE_API = '/prod-api'
+VITE_APP_BASE_API = '/api'
+VITE_SERVER = 'http://sph-api.atguigu.cn'
