--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
+    "echarts": "^5.4.3",
+    "echarts-liquidfill": "^3.1.0",
     "element-plus": "^2.3.6",
+    "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
+    "progress": "^2.0.3",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
